# wasm-farm

./: README.md  wasm_farmer_bot.wasm  wasm_farmer_bot.wit
example_farmer_bot/: Cargo.toml
example_farmer_bot/src/: bindings.rs  lib.rs
farm_server/: .gitignore  README.md  mix.exs
farm_server/assets/: tailwind.config.js
farm_server/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
farm_server/lib/: wasm_farmer.ex  wasm_farmer_web.ex
farm_server/lib/wasm_farmer/: application.ex  mailer.ex  repo.ex
farm_server/lib/wasm_farmer/game/: bot.ex  farm.ex  field.ex  game_server.ex  settings.ex  wasm_bot.ex
farm_server/lib/wasm_farmer_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
farm_server/lib/wasm_farmer_web/components/: core_components.ex  layouts.ex
farm_server/lib/wasm_farmer_web/components/layouts/: app.html.heex  root.html.heex
farm_server/lib/wasm_farmer_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex
farm_server/lib/wasm_farmer_web/live/: farm_list_live.ex  farm_list_live.html.heex  farm_live.ex  farm_live.html.heex
farm_server/priv/repo/: seeds.exs
farm_server/test/: test_helper.exs
farm_server/test/support/: conn_case.ex  data_case.ex
farm_server/test/wasm_farmer_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
