[package]
name = "wasm_farmer_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.1"
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "tessenow:wasm-farmer"

[package.metadata.component.dependencies]
